<resources>
    <string name="app_name">DumnoFood</string>
    <string name="get_started">Get Started</string>
    <string name="already">Sudah memiliki akun ?</string>
    <string name="loginLText"><u>Log in</u></string>
    <string name="nameinput">Name</string>
    <string name="emailinput">Email</string>
    <string name="passwordinput">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="or">- OR -</string>
    <string name="safe">You are completely safe.</string>
    <string name="termscon"><u>Read our Terms and Conditions.</u></string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="txtsign_up"><u>Sign Up</u></string>
    <string name="don_t_have_an_account">Belum punya akun ?</string>
    <string name="forgot_the_password"><u>Forgot the Password?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gtstart1">You have two hands one to help yourself, the second to help others.</string>
    <string name="gtstart2">Giving is not just about making a donation, it is about making a difference.</string>
    <string name="gtstart3">The community movement could change the way we think about helping each other
</string>

    <string name="tab_text_1">1</string>
    <string name="tab_text_2">2</string>
    <string name="tab_text_3">3</string>
    <string name="getlocationlong">Untuk menunjukkan kepada anda berapa banyak tetangga yang menunggu untuk berbagi dengan anda</string>
    <string name="pertama_kita_perlu_tahu_lokasi_anda">Pertama kita perlu tahu lokasi anda</string>
    <string name="title_activity_nav_main">navMain</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--    headings-->
    <string name="head_1">Mirna</string>
    <string name="head_2">Joko</string>
    <string name="head_3">Anwar</string>

    <!--deskitem-->
    <string name="item_1">deskrpsi 1</string>
    <string name="item_2">deskripsi 2</string>
    <string name="item_3">deskripsi 3</string>
    
    <!--savebefore-->
    <string name="dunkin">Dunkin Donut</string>
    <string name="added">added 7 minutes ago</string>
    <string name="pay">Pembayaran</string>
    <string name="itemtotal">Item Total                                                    Rp.8.000</string>
    <string name="ongkir">Biaya Pengiriman                                      Rp.0.</string>
    <string name="totalpay">Total                                                              Rp.8.000</string>

    <!--circleitem-->
    <string name="circle_name">name @username</string>
    <string name="circle_caption">keripik tortilla buatan sendiri,pesan saya jika anda ingin mengambilnya</string>
    <string name="circle_caption2">Saya baru saja menambahkan buah yang saya dapat dari DumnoFood ..terima kasih!senang telah menemukan aplikasi ini 😊</string>
    <string name="like">Like</string>
    <string name="comment">Komentar</string>
    <string name="share">Bagikan</string>
    <string name="like2">12 Suka</string>
    <string name="comment2">5 Komentar</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="foto_post">Foto Postingan</string>
    <string name="frame_foto">Frame Foto</string>
    <string name="kamera">Kamera</string>

    <!--massageitem-->
    <string name="name_chat">Jhon Doe</string>
    <string name="name_chat2">Jane Doe</string>
    <string name="name_chat3">Jojo </string>
    <string name="detail_chat">Halo namaku Jhon, aku tinggal di Jln. Meraki Gg.2, salam kenal.</string>
    <string name="detail_chat2">Halo jhon salam kenal juga, namaku Jane wahh ternyata rumah kita deket ya, aku tinggal di Gg. 5.</string>
    <string name="detail_chat3">Terima kasih atas makannanya ;)</string>

    <!--notifitem-->
    <string name="notif1">Pesanan Dimsum anda sedang dikirim!Cek pengiriman anda disini!</string>
    <string name="notif2">Seseorang menginginkan Dimsum yang anda bagikan! </string>
    <string name="notif3">Jane Doe, John Doe, dan 2 orang lainnya mengomentari post anda!</string>
    <string name="notif4">Jane Doe, John Doe, dan 5 orang lainnya menyukai post anda!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="ketentuan_layanan_kebijakan_privasi"><![CDATA[Ketentuan Layanan & Kebijakan Privasi]]></string>
    <string name="title_activity_setlocation2">setlocation2</string>
    <string name="caption">Caption</string>
    <string name="tambahkan_lokasi">Tambahkan Lokasi</string>
    <string name="tandai_seseorang">Tandai Seseorang</string>
    <string name="post_to_circle">Post to circle</string>
</resources>