<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUpActivity">


    <TextView
        android:id="@+id/tvgtstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/get_started"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvalready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/already"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvgtstart" />

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/loginLText"
        android:textColor="@color/textlink"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toEndOf="@+id/tvalready"
        app:layout_constraintTop_toBottomOf="@+id/tvgtstart" />

    <EditText
        android:id="@+id/editnameup"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/formkolom"
        android:ems="20"
        android:hint="@string/nameinput"
        android:textSize="14sp"
        android:inputType="textPersonName"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvalready" />

    <EditText
        android:id="@+id/editemailsup"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/formkolom"
        android:ems="20"
        android:hint="@string/emailinput"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editnameup" />

    <EditText
        android:id="@+id/editpasswup"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/formkolom"
        android:ems="20"
        android:hint="@string/passwordinput"
        android:inputType="textPassword"
        android:padding="7dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editemailsup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignup"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_color2"
        android:ems="18"
        android:fontFamily="@font/poppinsextrabold"
        android:textSize="11sp"
        android:text="@string/sign_up"
        android:textColor="@color/textputih"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editpasswup" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignG2"
        android:layout_width="291dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/signgoogle_btn"
        android:drawableLeft="@drawable/google_logo"
        android:ems="18"
        android:fontFamily="@font/poppinsextrabold"
        android:padding="10dp"
        android:text="@string/sign_in_with_google"
        android:textSize="9sp"
        android:textColor="@color/textform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignFb"
        android:layout_width="291dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/signfb_btn"
        android:drawableLeft="@drawable/facebook_logo"
        android:ems="18"
        android:fontFamily="@font/poppinsextrabold"
        android:padding="10dp"
        android:text="@string/sign_in_with_facebook"
        android:textColor="@color/textputih"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignG2" />

    <TextView
        android:id="@+id/safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/safe"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignFb" />

    <TextView
        android:id="@+id/termcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/termscon"
        android:textAlignment="center"
        android:textColor="@color/textlink"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safe" />


</androidx.constraintlayout.widget.ConstraintLayout>


