<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/framefoto"
            android:layout_width="190dp"
            android:layout_height="150dp"
            app:cardCornerRadius="8dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:layout_gravity="center"
            android:background="@drawable/formkolom2"
            android:contentDescription="@string/frame_foto">
        </ImageView>

        <ImageView
            android:id="@+id/addfoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="85dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/addcamera"
            android:contentDescription="@string/kamera">
        </ImageView>

        <EditText
            android:layout_width="380dp"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="250dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/formkolom"
            android:hint="@string/caption"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/abu"
            android:textSize="12sp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="310dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="125dp"
            android:background="@drawable/formkolom"
            android:hint="@string/tambahkan_lokasi"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/abu"
            android:textSize="12sp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="310dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="189dp"
            android:background="@drawable/formkolom"
            android:hint="@string/tandai_seseorang"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/abu"
            android:textSize="12sp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonKirim"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="535dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_color2"
            android:elevation="20dp"
            android:text="@string/post_to_circle"
            android:textColor="@color/textputih"
            android:textSize="11sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>