<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/login_to_your_account"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textalready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textlogin" />

    <TextView
        android:id="@+id/textsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/txtsign_up"
        android:textColor="@color/textlink"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/textalready"
        app:layout_constraintTop_toBottomOf="@+id/textlogin" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/bcksignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/backbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editemailin"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/formkolom"
        android:ems="15"
        android:hint="@string/emailinput"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textalready" />

    <EditText
        android:id="@+id/editpasswin"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/formkolom"
        android:ems="20"
        android:hint="@string/passwordinput"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editemailin" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/orange2"
        android:fontFamily="@font/poppinsregular"
        android:text="Remember me"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editpasswin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignin"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_color2"
        android:ems="18"
        android:fontFamily="@font/poppinsextrabold"
        android:text="Sign in"
        android:textColor="@color/textputih"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textForgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/forgot_the_password"
        android:textColor="@color/textlink"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignin" />


</androidx.constraintlayout.widget.ConstraintLayout>

