<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/jhon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/tv_item_userchat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
        tools:ignore="MissingConstraints"
        tools:text="@string/name_chat" />

    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="76dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_massage"
        android:backgroundTint="@color/orangemuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_item_detaichat"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="13dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppinsregular"
            android:maxLines="3"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="173dp"
            tools:text="@string/detail_chat"
            tools:visibility="visible" />
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/jane"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/tv_item_userchat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="336dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
        tools:ignore="MissingConstraints"
        tools:text="@string/name_chat2" />

    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/bg_massage2"
        android:backgroundTint="@color/orangemuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_item_detaichat2"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppinsregular"
            android:maxLines="5"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="173dp"
            tools:text="@string/detail_chat2"
            tools:visibility="visible" />
    </RelativeLayout>

    <EditText
        android:layout_width="316dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/formkolom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </EditText>

    <Button
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>